--- a/Network/code/storage/storage_index2.html
+++ b/Network/code/storage/storage_index2.html
@@ -13,7 +13,7 @@
       3.打开多个相同的 URL 的 Tabs 页面，会创建各自的 sessionStorage
       4.关闭对应浏览器或窗口，会清除对应的 sessionStorage
     -->
-    <p2>sessionStorage2</p2>
+    <h2>sessionStorage2</h2>
     <script>
       console.log('sessionStorage', window.sessionStorage.getItem('sessionStorage_page1'))
       console.log('localStorage', window.localStorage.getItem('localStorage_page1'))
